# claudevoice

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
claudevoice/: __init__.py  __main__.py  app.py  config.py
claudevoice/claude/: base.py  messages.py  subprocess_backend.py
claudevoice/input/: base.py  keyboard_input.py  recorder.py  transcriber.py  voice_input.py  wake_word.py
claudevoice/pipeline/: chunker.py  extractor.py
claudevoice/tts/: base.py  piper_engine.py  playback.py
claudevoice/ui/: components.py  console.py  input_prompt.py  markdown_stream.py  renderer.py
tests/: test_chunker.py  test_extractor.py  test_interrupt.py  test_subprocess_parser.py  test_voice_input.py
tests/fixtures/: sample_stream.jsonl
